<?xml version="1.0"?>
<package format="2">
  <name>behavior_tree_cpp</name>
  <version>0.0.0</version>
  <description>The cpp_bt_node package</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>py_trees</build_depend>
  <build_depend>py_trees_ros</build_depend>
  <build_depend>ZeroMQ</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>ZeroMQ</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
